[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "psenv"
version = "0.17.1"
description = "A tool for managing AWS Parameter Store environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"python-dotenv==1.1.0",
	"pyyaml==6.0.2",
	"boto3==1.38.32",
	"prettytable==3.4.1",
	"structlog==25.4.0",
	"pydantic==2.11.5"
]

[project.optional-dependencies]
dev = [
	"pytest==8.4.0",
	"pytest-cov==6.1.1",
	"ruff==0.11.13",
	"boto3-stubs[ssm, sts]==1.38.32"
]


[project.scripts]
psenv = "psenv.__main__:main"



[tool.ruff]
line-length = 160
fix = true

[tool.ruff.lint]
select = ["I", "F401"]

